Inconsistency in link styles #99